# kerr2Kitaev2

./: CMakeLists.txt  consts.hpp  main.cpp  plotAAPhase.py  plotAllTime.py  plotAtT.py  plotGAA.py  plotGIncr.py  plotLastG.py  pltDAllTime.py  solver.cpp  solver.hpp
